:hammer: [.broken-image] overlapping issue FIXED

--- a/style.css
+++ b/style.css
@@ -1070,8 +1070,8 @@ li.dropdown.user-menu li.user-footer { padding: 10px; float: left; width: 100%;}
 /**./dashboard-user-menu**/
 
 
-img.broken-image { min-height: 140px; text-align: center;}
-img.broken-image:before,img.broken-image:after {  position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; display: block;}
+img.broken-image { min-height: 120px; min-width: 140px; text-align: center; position: relative;}
+img.broken-image:before,img.broken-image:after {  position: absolute; top: 0px; left: 0px; min-height: 120px; width: 100%; display: block;}
 img.broken-image:before { content: "\f127" " - " "\f030"; background-color: #eee; border: 1px dotted #ccc; font-family: FontAwesome; font-size: 2.4em; color:#ccc; padding-top:0.8em;}
 img.broken-image:after { content:  "Broken Image of " attr(alt); padding-top: 6em;}
 
